--- a/padrao.css
+++ b/padrao.css
@@ -1,8 +1,11 @@
-header {
-	text-align:center;
-}
-
-.dark-mode {
-	  background-color: #121212;
-	    color: white;
+.icon {
+  vertical-align: sub;
+  padding-right: .25rem;
+  display: inline-block;
+  width: 1em;
+  height: 1.3em;
+  margin-right: 0.2rem;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
 }
